L05: CSS - Fonts and Spacing: Correct fonts

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -13,8 +13,12 @@ Fonts are separated by a & */
   --accent2-color: #ffffff;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Kaushan Script";
-  --paragraph-font: Ubuntu;
+  --heading-font: "Kaushan Script",
+    'Brush Script MT',
+    Georgia;
+  --paragraph-font: Ubuntu,
+    Arial,
+    Verdana;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #0E2E55;
